# simASP

./: .gitignore  Assignment4_Pipeline_Design.docx  CMakeLists.txt  ISA_Spec.md  Project_Documentation.md  README.md  large_sparse_test.asm  performance_comparison.txt  pipeline_diagram.txt  pipeline_trace.csv  pipelined_run.txt  run_benchmarks.py  run_tests.py  singlecycle_run.txt  sparse_test.asm  tempCodeRunnerFile.py  test_addi.asm  test_lnz.asm  test_program.asm  test_vector.asm  test_vector_v1.asm
Final_Submission/: SparseFlow_Code_Documentation.docx  SparseFlow_Final_Report.docx  test_results.txt  ~$arseFlow_Final_Report.docx
Final_Submission/Benchmarks/: benchmark_results.txt  sparse_60pct.asm  sparse_80pct.asm
Final_Submission/Source_Code/: ISA_Spec.md  Project_Documentation.md  README.md
Final_Submission/Source_Code/src/: main.cpp
Final_Submission/Source_Code/src/core/: SparseFlowCore.cpp  SparseFlowCore.h
Final_Submission/Tests/: test_branch.asm  test_forwarding.asm  test_hazard.asm
Final_Submission/Traces/: sparse_pipelined.txt  sparse_single_cycle.txt
benchmarks/: sparse_70pct.asm  sparse_90pct.asm  sparse_99pct.asm  sparse_sum.asm
src/: main.cpp
src/core/: PipelineRegisters.h  SparseFlowCore.cpp  SparseFlowCore.h
src/hardware/: BranchPredictor.cpp  BranchPredictor.h  Cache.cpp  Cache.h  Memory.cpp  Memory.h  RegisterFile.cpp  RegisterFile.h
src/isa/: ISA.h  Instruction.h
src/utils/: Loader.cpp  Loader.h  Stats.h  TraceLogger.cpp  TraceLogger.h
tests/: test_branch.asm  test_forwarding.asm
(+14 files in other folders)
